Version 1.4: Fixed mobile layout issue.

--- a/style.css
+++ b/style.css
@@ -247,8 +247,8 @@ h6 {
 }
 
 .custom-drop-shadow-black {
-   filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.5));
-   -webkit-filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.5)); 
+   filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.0));
+   -webkit-filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.0)); 
 }
 
 
@@ -431,7 +431,7 @@ h6 {
 #contact  .col {
    display: flex; /* Enables flexbox within each column */
    flex-direction: column; /* Ensures vertical stacking of child elements */
-   min-width: 600px;
+   min-width: 300px;
    justify-content: center;
    align-items: center;
 }
@@ -441,8 +441,8 @@ h6 {
    justify-content: center;
    align-items: center;
    background-color: rgb(255, 255, 255);
-   width: 600px;
-   margin: 0 30px 30px 30px;
+/*    width: 400px;
+ */   margin: 0 30px 30px 30px;
    border-radius: 10px;
 }
 
